--- a/notebooks/data_merging.ipynb
+++ b/notebooks/data_merging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,16 +59,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error fetching data from table 'route_table' in database 'truck_delay_raw': (psycopg2.errors.UndefinedTable) relation \"route_table\" does not exist\n",
+      "LINE 1: SELECT * FROM route_table;\n",
+      "                      ^\n",
+      "\n",
+      "[SQL: SELECT * FROM route_table;]\n",
+      "(Background on this error at: https://sqlalche.me/e/14/f405)\n",
+      "Error fetching data from table 'route_weather_table' in database 'truck_delay_raw': (psycopg2.errors.UndefinedTable) relation \"route_weather_table\" does not exist\n",
+      "LINE 1: SELECT * FROM route_weather_table;\n",
+      "                      ^\n",
+      "\n",
+      "[SQL: SELECT * FROM route_weather_table;]\n",
+      "(Background on this error at: https://sqlalche.me/e/14/f405)\n",
+      "Error fetching data from table 'trucks_schedule_table' in database 'truck_delay_raw': (psycopg2.errors.UndefinedTable) relation \"trucks_schedule_table\" does not exist\n",
+      "LINE 1: SELECT * FROM trucks_schedule_table;\n",
+      "                      ^\n",
+      "\n",
+      "[SQL: SELECT * FROM trucks_schedule_table;]\n",
+      "(Background on this error at: https://sqlalche.me/e/14/f405)\n"
+     ]
+    }
+   ],
    "source": [
-    "route_df = fetch_table(\"td_clean_data\", \"route_table\")\n",
-    "route_weather_df = fetch_table(\"td_clean_data\", \"route_weather_table\")\n",
-    "traffic_table_df = fetch_table(\"td_clean_data\", \"traffic_table\")\n",
-    "trucks_df = fetch_table(\"td_clean_data\", \"trucks_table\")\n",
-    "drivers_df = fetch_table(\"td_clean_data\", \"drivers_table\")\n",
-    "trucks_schedule_df = fetch_table(\"td_clean_data\", \"trucks_schedule_table\")"
+    "route_df = fetch_table(\"truck_delay_raw\", \"route_table\")\n",
+    "route_weather_df = fetch_table(\"truck_delay_raw\", \"route_weather_table\")\n",
+    "traffic_table_df = fetch_table(\"truck_delay_raw\", \"traffic_table\")\n",
+    "trucks_df = fetch_table(\"truck_delay_raw\", \"trucks_table\")\n",
+    "drivers_df = fetch_table(\"truck_delay_raw\", \"drivers_table\")\n",
+    "trucks_schedule_df = fetch_table(\"truck_delay_raw\", \"trucks_schedule_table\")"
    ]
   },
   {
